name:                aava-proj
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/rodamber/aava#README.md
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable online-matching
  hs-source-dirs:      app/online-matching
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aava-proj
                     , text
  default-language:    Haskell2010

library
  hs-source-dirs:      src
  exposed-modules:     Lib, FFI, Haskell
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.5
                     , text
                     , mtl
                     , QuickCheck >= 2.8
                     , hspec
  default-language:    Haskell2010
  C-Sources:           cbits/online-matching/online_matching.c

test-suite aava-proj-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , containers >= 0.5
                     , aava-proj
                     , text
                     , hspec
                     , QuickCheck >= 2.8
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/rodamber/aava
